fix: allow id token generation to support native protocol claim generation i.e. amr